# YouTube-Music-API

./: LICENSE  README.md  README.rst  __init__.py  _config.yml  build.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/: FUNDING.yml
.github/workflows/: build.yml  python-app.yml  python-package.yml  script.yml  test.yml
YouTubeMusicAPI/: __init__.py
beta/: README.md
beta/src/: __init__.py
docs/: web-api.rst
pypi/: README.md
pypi/YouTubeMusicAPI/: __init__.py
src/: YouTubeMusicAPI.py  __init__.py
src/YouTubeMusicAPI/: __init__.py
web/: main.py
web-api/: main.py
webapi/: main.py  requirements.txt
