[metadata]
name = YouTubeMusicAPI
version = 2.7
author = CJ Praveen
author_email = cjpraveen@hotmail.com
description = The search API for YouTube Music.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cj-praveen/YouTube-Music-API
keywords = "youtube music api, YouTubeMusicAPI, python youtube music api, youtube music api python, youtube api pypi, youtube api"
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
